<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/general" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_margin="0dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:layout_width="0dp"
            android:layout_height="0dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/formula" android:textSize="30sp"
                android:textAlignment="textEnd" android:paddingTop="30dp" android:paddingRight="20dp"
                android:paddingLeft="20dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/result" android:paddingRight="20dp"
                android:paddingTop="25dp" android:textAlignment="textEnd" android:textSize="36sp" tools:text="0"
                android:paddingLeft="20dp"/>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/buttons" android:paddingTop="20dp"
                android:paddingStart="0dp" android:paddingEnd="0dp" style="?android:attr/buttonBarStyle">

            <TableRow android:layout_height="match_parent"
                      android:layout_weight="1" android:layout_width="match_parent">
                <Button
                        android:layout_height="match_parent" android:id="@+id/clear" android:layout_weight="1"
                        android:layout_width="0dp" style="@style/Widget.AppCompat.Button.Colored"
                        android:background="@android:color/darker_gray" android:backgroundTint="#4DB6AC"
                        android:textSize="24sp" android:text="@string/clear" android:layout_margin="1dp"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/mark" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:textSize="24sp" android:text="@string/mark"
                        android:layout_margin="1dp"/>
                <Button
                        android:layout_height="match_parent" android:id="@+id/mod" android:layout_width="0dp"
                        android:layout_weight="1" style="@style/Widget.AppCompat.Button.Colored"
                        android:background="@android:color/darker_gray" android:backgroundTint="#4DB6AC"
                        android:textSize="24sp" android:text="@string/mod" android:layout_margin="1dp"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/del" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:text="@string/del" android:textSize="24sp"
                        android:layout_margin="1dp"/>
            </TableRow>
            <TableRow android:layout_height="match_parent"
                      android:layout_weight="1" android:layout_width="match_parent">
                <Button
                        android:layout_height="match_parent" android:id="@+id/seven" android:layout_weight="1"
                        android:layout_width="0dp" style="@style/Widget.AppCompat.Button.Colored"
                        android:background="@android:color/darker_gray" android:backgroundTint="#4DB6AC"
                        android:textSize="24sp" android:text="@string/seven" android:layout_margin="1dp"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/eight" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:textSize="24sp" android:text="@string/eight"
                        android:layout_margin="1dp"/>
                <Button
                        android:layout_height="match_parent" android:id="@+id/nine" android:layout_width="0dp"
                        android:layout_weight="1" style="@style/Widget.AppCompat.Button.Colored"
                        android:background="@android:color/darker_gray" android:backgroundTint="#4DB6AC"
                        android:textSize="24sp" android:text="@string/nine" android:layout_margin="1dp"/>
                <Button
                        android:layout_height="match_parent" android:id="@+id/divition" android:layout_width="0dp"
                        android:layout_weight="1" style="@style/Widget.AppCompat.Button.Colored"
                        android:textStyle="bold"
                        android:background="@android:color/darker_gray" android:backgroundTint="#4DB6AC"
                        android:textSize="24sp" android:text="@string/div" android:layout_margin="1dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/four" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:textSize="24sp" android:text="@string/four"
                        android:layout_margin="1dp"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/five" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:textSize="24sp" android:text="@string/five"
                        android:layout_margin="1dp"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/six" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:textSize="24sp" android:text="@string/six"
                        android:layout_margin="1dp"/>
                <Button
                        android:layout_height="match_parent" android:id="@+id/multiple" android:layout_width="0dp"
                        android:layout_weight="1" style="@style/Widget.AppCompat.Button.Colored"
                        android:textStyle="bold"
                        android:background="@android:color/darker_gray" android:backgroundTint="#4DB6AC"
                        android:textSize="24sp" android:text="@string/multiple" android:layout_margin="1dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/one" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:textSize="24sp" android:text="@string/one"
                        android:layout_margin="1dp"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/two" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:textSize="24sp" android:text="@string/two"
                        android:layout_margin="1dp"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/three" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:textSize="24sp" android:text="@string/three"
                        android:layout_margin="1dp"/>
                <Button
                        android:layout_height="match_parent" android:id="@+id/sub" android:layout_width="0dp"
                        android:layout_weight="1" style="@style/Widget.AppCompat.Button.Colored"
                        android:textStyle="bold"
                        android:background="@android:color/darker_gray" android:backgroundTint="#4DB6AC"
                        android:textSize="24sp" android:text="@string/sub" android:layout_margin="1dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/dot" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:textStyle="bold" android:textSize="24sp"
                        android:background="@android:color/darker_gray" android:backgroundTint="#4DB6AC"
                        android:text="@string/dot" android:layout_margin="1dp"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/zero" android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:textSize="24sp" android:text="@string/zero"
                        android:layout_margin="1dp"/>
                <Button
                        android:layout_height="match_parent" android:id="@+id/equal" android:layout_width="0dp"
                        android:layout_weight="1" style="@style/Widget.AppCompat.Button.Colored"
                        android:textStyle="bold"
                        android:background="@android:color/darker_gray" android:backgroundTint="#4DB6AC"
                        android:textSize="24sp" android:text="@string/equal" android:layout_margin="1dp"/>
                <Button
                        android:layout_height="match_parent" android:id="@+id/add" android:layout_width="0dp"
                        android:layout_weight="1" style="@style/Widget.AppCompat.Button.Colored"
                        android:textStyle="bold"
                        android:textSize="24sp" android:background="@android:color/darker_gray"
                        android:backgroundTint="#4DB6AC" android:text="@string/add" android:layout_margin="1dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>